--- a/training/packages.config
+++ b/training/packages.config
@@ -43,6 +43,7 @@
   <package id="MongoDB.Driver.Core" version="2.7.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="particles.js" version="2.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="System.Buffers" version="4.3.0" targetFramework="net452" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net452" />
